.header {   width: 100%;   position: fixed;   background-color: #040d12;   z-index: 5; }:   css/header.css

--- a/css/header.css
+++ b/css/header.css
@@ -6,7 +6,7 @@
 .header {
   width: 100%;
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #040d12;
   z-index: 5;
 }
 .header .container {
